# rust-web-server-boilerplate

./: .gitignore  Cargo.toml  README.md
adapters/postgres/: Cargo.toml
adapters/postgres/migrations/: 0001_create_users.sql  0002_create_tasks.sql  0003_create_task_comments.sql  0004_idx_tasks_cursor.sql  0005_idx_task_comments_cursor.sql
adapters/postgres/src/: error.rs  lib.rs  pool.rs  uow.rs
adapters/postgres/src/repos/: comment.rs  mod.rs  task.rs  user.rs
adapters/postgres/tests/: pool.rs
adapters/scylla/: Cargo.toml  test_imports.rs
adapters/scylla/src/: lib.rs
adapters/scylla/tests/: session.rs
adapters/telemetry/: Cargo.toml
adapters/telemetry/src/: lib.rs
adapters/telemetry/tests/: logger.rs
application/: Cargo.toml
application/src/: error.rs
application/src/services/: task_service.rs  user_service.rs
domain/: Cargo.toml
domain/src/: error.rs  events.rs  id.rs  lib.rs  task.rs  task_comment.rs  user.rs
domain/src/ports/: mod.rs
forma/: Cargo.toml  README.md
forma/src/: errors.rs  lib.rs  schema.rs
forma/src/rules/: datetime.rs  mod.rs  number.rs  string.rs
forma/tests/: datetime.rs  errors.rs  macros.rs  number.rs  string.rs
http/: Cargo.toml
http/src/: auth.rs  cursor.rs  error.rs  lib.rs
http/src/extractors/: auth.rs  mod.rs  trace.rs  validation.rs
http/src/middleware/: auth.rs  mod.rs  trace.rs
http/src/routes/: mod.rs  tasks.rs
http/src/routes/tasks/: handlers.rs  mod.rs
http/src/schemas/: fields.rs  mod.rs  requests.rs  response.rs
src/: lib.rs  main.rs
src/app/: health.rs  mod.rs  state.rs  tasks.rs  telemetry.rs
src/config/: database.rs  mod.rs  security.rs  server.rs
src/config/providers/: mod.rs  postgres.rs  scylla.rs  telemetry.rs
