[package]
name = "forma"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
datetime = ["dep:chrono"]
