[package]
name = "servicez-http"
version = "0.1.0"
edition = "2021"

[dependencies]
servicez-domain = { path = "../domain" }
servicez-application = { path = "../application" }

# Web framework
axum = "0.8.8"
axum-extra = { version = "0.12", features = ["query"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Observability
tracing = "0.1.44"

# Validation
forma = { path = "../forma", features = ["datetime"] }
chrono = { version = "0.4.43", features = ["serde"] }

anyhow = "1"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
base64 = "0.22"