[package]
name = "servicez-db-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
servicez-domain = { path = "../../domain" }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.49", features = ["sync"] }
anyhow = "1"


[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }